--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
   <link rel="stylesheet" href="stylesheet.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   
+  
 </head>
 <body>
+  <div id="splash">
+    <div id="splash_text"></div>
+    <div class="loader_cover loader_cover-up"></div>
+    <div class="loader_cover loader_cover-down"></div>
+  </div>
+  <main>
   <header class="header" id="header">
     <div class="header-nav">
       <div class="header-nav-wrapper u-content-wrapper">
@@ -50,7 +57,7 @@
 
   </div>
   </header>
-  <main>
+  
     
     <div class="concept" id="concept">
       <div class="u-content-wrapper">
@@ -178,7 +185,8 @@
       <p>Copyright © Shiro All Rights Reserved.</p>
     </div>
   </main>
-  <script src="index.js"></script>
+ <script src="index.js"></script>
+ <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
   
 
 </body>
